# medical_center

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: .env  heroku.yml  settings.py  urls.py
discover/: admin.py  forms.py  models.py  permessions.py  predictor.py  urls.py  views.py
discover/migrations/: 0001_initial.py  0002_auto_20211117_2015.py  0003_malady_email.py  0004_malady_mobile.py  0005_malady_paitent.py  0006_auto_20211117_2231.py  0007_auto_20211117_2241.py  0008_auto_20211119_1416.py  0009_remove_malady_paitent.py
pages/: urls.py  views.py
pages/migrations/: 0001_initial.py  0002_malady_paitent.py  0003_delete_malady.py
templates/: _base.html
templates/account/: login.html  logout.html  signup.html
templates/pages/: about.html  discover.html  home.html  result_detail.html  result_list.html
