[tool.poetry]
name = "medical_center"
version = "0.1.0"
description = ""
authors = ["Jehadabuawwad <jehadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
django-debug-toolbar = "3.2"
whitenoise = "5.2.0"
sklearn = "^0.0"
pandas = "^1.3.4"
django-environ = "^0.8.1"
django-cors-headers = "^3.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
black = "^21.11b1"
flake8 = "^4.0.1"
[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
